# ComfyUI-CLIPSlider-SC

./: nodes.py  pyproject.toml
workflows/: clipslidersc.json
