[project]
name = "comfyui-clipslider-sc"
description = "A node to replicate  https://huggingface.co/spaces/latentexplorers/latentnavigation-flux, the initial node is made by https://github.com/RhizoNymph/ComfyUI-CLIPSli der created, I made a few changes to make it more in line with my needs."
version = "1.1.0"
license = {file = "LICENSE"}
dependencies = ["diffusers"]

[project.urls]
Repository = "https://github.com/chenbaiyujason/ComfyUI-CLIPSlider-SC"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shichen"
DisplayName = "ComfyUI-CLIPSlider"
Icon = ""
